[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Layer.gd" type="Script" id=1]
[ext_resource path="res://scenes/CellArray.tscn" type="PackedScene" id=2]

[node name="Layer" type="Spatial"]
script = ExtResource( 1 )

[node name="LocalCells" parent="." instance=ExtResource( 2 )]
cell_scene_path = "res://scenes/Cell.tscn"
steps = [ 3.0, 2.0, 0.0 ]

[node name="ContextCells" parent="." instance=ExtResource( 2 )]
cell_scene_path = "res://scenes/Cell.tscn"
steps = [ 3.0, 2.0, 0.0 ]

[node name="FeedbackCells" parent="." instance=ExtResource( 2 )]
cell_scene_path = "res://scenes/Cell.tscn"
steps = [ 3.0, 2.0, 0.0 ]
